Menu toggle, dark/light theme toggle

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -198,3 +198,8 @@ body.light-theme {
 .menu-toggle-icon.activated .close-menu-icon {
   display: block;
 }
+
+/*search*/
+.search {
+  height: 2000rem;
+}
