--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -393,3 +393,51 @@ body.light-theme {
   background-color: var(--light-color-alt);
   transform: rotate(45deg);
 }
+
+title {
+  color: var(--light-color);
+}
+
+article-title {
+  font-size: var(--font-size-md);
+}
+
+/*featured artices Sidebar */
+.sidebar {
+  background-color: var(--secondary-background-color);
+  padding: 2.5rem;
+}
+
+.trending-news-box {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap);
+  padding-block: 2rem;
+  border: 1px solid var(--transparent-light-color);
+}
+
+.trending-news-box:list-of-type {
+  border-bottom: none;
+}
+.trending-news-image-box {
+  position: relative;
+  width: 100%;
+  height: var(--item-min-height-sm);
+}
+
+.featured-content-title {
+  font-size: var(--font-size-md);
+  text-align: center;
+  padding: 1rem;
+}
+
+.trending-number {
+  position: absolute;
+  top: -1rem;
+  left: -1rem;
+  z-index: 15;
+  width: 3rem;
+  height: 3rem;
+  background-color: var(--secondary-background-color);
+  color: var(--light-color);
+}
