--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -440,4 +440,57 @@ article-title {
   height: 3rem;
   background-color: var(--secondary-background-color);
   color: var(--light-color);
+  border-radius: 50%;
+}
+
+.trending-news-data .article-title {
+  font-size: var(--font-size-sm);
+}
+
+.trending-news-box:hover .article-title {
+  color: var(--light-color-alt);
+}
+
+/* Quick read */
+
+.section-title {
+  position: relative;
+  font-size: var(--font-size-md);
+  margin-bottom: 6rem;
+}
+
+.section-title::before {
+  content: attr(data-name);
+  font-size: var(--font-size-lg);
+  text-transform: uppercase;
+  opacity: 0.1;
+  position: absolute;
+  top: 1.5rem;
+  left: 2rem;
+}
+
+.article.swiper-slide {
+  height: 40rem;
+}
+
+.swiper-wrapper {
+  height: auto;
+}
+.swiper-controls {
+  width: 3.5rem;
+  height: 3.5rem;
+  background-color: var(--secondary-background-color);
+}
+
+.swiper-controls::after {
+  font-size: 1.6rem;
+  color: var(--light-color);
+}
+
+.swiper-pagination {
+  bottom: 0.5rem !important;
+}
+
+.swiper-pagination-bullet {
+  background-color: var(--light-color);
 }
