--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -573,3 +573,55 @@ article-title {
 .newsletter-description {
   margin-bottom: 3rem;
 }
+
+/*footer*/
+.footer {
+  background-color: var(--secondary-background-color);
+}
+.footer-container {
+  gap: var(--gap);
+}
+
+.company-data {
+  display: flex;
+  flex-direction: column;
+  order: 1;
+}
+
+.company-description {
+  margin-block: var(--margin-sm);
+  max-width: 75%;
+}
+
+.social-media {
+  margin-bottom: var(--margin-md);
+}
+
+.copyright-notice {
+  opacity: 0.8;
+}
+
+.footer-list {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.footer-title {
+  font-size: var(--font-size-md);
+  text-transform: uppercase;
+  margin-bottom: var(--margin-sm);
+}
+
+/*Scroll bar*/
+::--webkit-scrollbar {
+  width: 1rem;
+}
+::webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+::webkit-scrollbar-thumb {
+  background-color: #3f4254;
+}
+::webkit-scrollbar-thumb:hover {
+  background-color: #3f4254;
+}
