--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -613,15 +613,15 @@ article-title {
 }
 
 /*Scroll bar*/
-::--webkit-scrollbar {
+::-webkit-scrollbar {
   width: 1rem;
 }
-::webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background-color: #f1f1f1;
 }
-::webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background-color: #3f4254;
 }
-::webkit-scrollbar-thumb:hover {
-  background-color: #3f4254;
+::-webkit-scrollbar-thumb:hover {
+  background-color: #2e303b;
 }
