--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -718,7 +718,7 @@ article-title {
     flex-direction: row;
     align-items: center;
   }
-  .trnding-news-image-box {
+  .trending-news-image-box {
     width: 50%;
   }
   .trending-news-data {
@@ -734,5 +734,45 @@ article-title {
   }
   .form-container-inner {
     align-items: center;
+  }
+  .company-data {
+    order: 0;
+  }
+
+  .author {
+    grid-template-columns: 25rem 1fr;
+  }
+}
+@media screen and (min-width: 768px) {
+  .featured-content {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 5rem repeat(4, 1fr);
+  }
+
+  .headline-banner {
+    grid-column: 1/-1;
+    font-size: var(--font-size-sm);
+  }
+  .featured-article {
+    grid-column: 3/-1;
+    grid-row: 2/4;
+  }
+
+  .featured-article-1 {
+    grid-column: 1/3;
+  }
+
+  .featured-article-3 {
+    grid-column: 1/-1;
+    grid-row: 4/6;
+  }
+  .older-posts .article {
+    grid-template-columns: 25rem 1fr;
+  }
+  .older-posts-article-image-wrapper {
+    height: auto;
+  }
+  .blog-post-data img {
+    height: var(--item-min-height-md);
   }
 }
