--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -87,8 +87,8 @@ body.light-theme {
   --primary-background-color: #fff;
   --secondary-background-color: #f1f1f1;
   --hover-light-color: #fff;
-  --transparent-light-color: #252830;
-  --transparent-dark-color: rgba(0, 0, 0, 0.1);
+  --transparent-dark-color: #f1f1f1;
+  --transparent-light-color: rgba(0, 0, 0, 0.1);
 }
 
 /*Reuseable Classes*/
@@ -130,6 +130,7 @@ body.light-theme {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-block: 1.5rem;
 }
 
 .log {
@@ -286,7 +287,7 @@ body.light-theme {
 }
 
 .featured-articles-container,
-.featured-content-container {
+.featured-content {
   gap: var(--gap);
 }
 
@@ -398,7 +399,7 @@ title {
   color: var(--light-color);
 }
 
-article-title {
+.article-title {
   font-size: var(--font-size-md);
 }
 
@@ -834,5 +835,18 @@ article-title {
     height: 40rem;
   }
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1200px) {
+  .older-posts-grid-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 1500px) {
+  .featured-article {
+    grid-column: 3/-1;
+  }
+
+  .featured-article-1 {
+    grid-column: 1/3;
+    grid-row: 2/-1;
+  }
 }
